# VerilogDeepSeekR1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_Thunder.md  Thunder_Compute_CLI_ref.txt  cleanup_base_env.py  pyproject.toml  requirements.txt  requirements_mac.txt  requirements_thunder.txt  setup.py  setup_thunder.sh
configs/: cost_optimized_config.yaml  deepspeed_config.json  deepspeed_stage3_config.json  ppo_config.yaml  training_config.yaml
scripts/: cost_calculator.py  deploy_model.py  download_and_preprocess.py  evaluate_model.py  install_dependencies.sh  launch_thunder.py  monitor_training.py  setup_thunder.py  train_ppo.py  train_supervised.py  train_thunder.sh
src/data/: dataset_downloader.py  preprocessor.py
src/evaluation/: evaluator.py
src/models/: model_setup.py
src/training/: data_collator.py  ppo_trainer.py  reward_model.py  supervised_trainer.py
tests/: test_data_collator.py  test_reward_model.py
